--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,33 @@
 * {
     padding: 0;
-    background-color: aliceblue;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 16px;
 }
 
 body {
-    color: aqua;
+    background-color: black;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.grid-container {
+
+}
+
+
+
+.grid-box {
+    background-color: dodgerblue;
+    border: 3px solid rgb(20, 95, 170);
+    padding: 2rem;
+    font-size: 1rem;
+}
+
+.text-main {
+    font-size: 14px
+
 }
